--- a/styles/guide.css
+++ b/styles/guide.css
@@ -4,13 +4,22 @@
 	font-size: 100%;
 }
 
+body {
+	font-family: Georgia,Times,'Times New Roman',serif;
+    font-size: 1.1875rem;
+    line-height: 1.9375rem;
+    letter-spacing: normal;
+}
+
 #pagewrapper {
 	border: none;
 	width: 80%;
 	margin: 0.75rem auto;
 }
 
+h1 {
 
+}
 
 section {
 	border: 1px solid lightgrey;
@@ -18,6 +27,32 @@ section {
 
 header {
 	border: 1px solid lightgrey;
+}
+
+.placeslist {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin-top: 1rem;
+}
+
+.place {
+	width: 200px;
+	margin: 1rem 0.25rem;
+	border: 1px solid lightgrey;
+}
+
+.place img {
+	max-width: 100%;
+	display: block;
+	margin: 0.5rem;
+	margin: 0.5rem auto;
+}
+
+#front img {
+	max-width: 100%;
+  	height: auto;
 }
 
 #primarynav {
@@ -49,6 +84,8 @@ header {
 	width: 80%;
 }
 
-img {
-	width: 100%;
+#review img {
+	border-radius: 50%;
+	float: left;
+	width: 5%;
 }
